--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,18 @@
 	url = https://github.com/r-universe-org/cran-to-git
 	shallow = true
 	branch = HEAD
+[submodule "distantia"]
+	path = distantia
+	url = https://github.com/blasbenito/distantia
+	shallow = true
+	registered = true
+[submodule "spatialRF"]
+	path = spatialRF
+	url = https://github.com/blasbenito/spatialrf
+	shallow = true
+	registered = true
+[submodule "virtualPollen"]
+	path = virtualPollen
+	url = https://github.com/blasbenito/virtualpollen
+	shallow = true
+	registered = true
